@@ -34,6 +34,10 @@ proc gcj_jni_compile_c_to_so {file {options {}}} {
   if { [istarget "arm*"] } {
       lappend options "additional_flags=-Wno-abi"
   }
+  # Tru64 UNIX requires <pthread.h> to be compiled with -pthread.
+  if { [istarget "alpha*-dec-osf*"] } {
+      lappend options "additional_flags=-pthread"
+  }
 
   set filename [file tail $file]
   set name [file rootname $filename]
